fix: fix css and html file for validation

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="eng">
+<html lang="en">
 <head>
 	<title>CV_Alelsandr</title>
 	<meta http-equiv="content-type" content="text/html;charset=utf-8">
@@ -13,7 +13,7 @@
     <figcaption>This is my photo</figcaption>
 </figure>
 <nav>
-   <ul> <span class="navig">Navigation</span>
+   <ul class="navig"> Navigation
        <li><a href="#main"> Main information</a></li>
        <li><a href="#con">Contacts</a></li>
        <li><a href="#about">About me</a></li>
@@ -22,38 +22,40 @@
        <li><a href="#ex">Experience</a></li>
        <li><a href="#ed">Education</a></li>
        <li><a href="#lang">Language skiils</a></li>
-       
    </ul>
 </nav>
     </header>
     <main>
         <h2>My CV</h2>
-        <ol>
-            <li id="main"> Main information: </li>
-                <div class="name">Aleksandr Golamonov</div>
-            <li id="con">Contacts:</li>
+            <section id="main"> 1. Main information: 
+               <div class="name"> Aleksandr Golamonov</div> 
+            </section>
+            <section id="con">2. Contacts:
                     <ul >
                         <li class="continf">Belarus, Minsk</li>
                         <li class="continf">alex-89fish@tut.by</li>
                         <li class="continf">https://vk.com/id25137523</li>
                     </ul>
-            <li id="about"> About me:</li>
-            <div>I am a beginner in IT and it is my first course in this area.
+            </section>
+            <section id="about">3. About me:
+            <p class="about">I am a beginner in IT and it is my first course in this area.
                  But I want to start study JS for change my life. 
                  I want to increase my skills and I am ready for it.
-            </div>
-            <li id="skl">Skills:</li>
-            <div>I have a few knowledge in HTML and CSS.</div>
-            <ul>
-                <div class="useskl">But I have some useful skills:</div>
+            </p>
+            </section>
+            <section id="skl">4. Skills:
+            <div class="skl">I have a few knowledge in HTML and CSS.</div>
+            <div class="skl_two">But I have some useful skills:</div>
+            <ul>  
                 <li class="continf">Basic knowlage in computer scince</li>
                 <li class="continf">Analitical thinking</li>
                 <li class="continf">Purposefulness</li>
                 <li class="continf">Greate motivation</li>
             </ul>
-            <li id="code">Code exapmle:</li>
-            <p class="codeinf">This is code from my JS study:</p>
-            <code> 
+            </section>
+            <section id="code">5. Code exapmle:
+                <p class="codeinf">This is code from my JS study:</p>
+                <code> 
               function marry (man,woman) {
                   woman.husband=man;
                   man.wife-woman;
@@ -68,20 +70,24 @@
                   name: "Ann"
               });
             </code>
-            <li id="ex">Experience:</li>
-            <div>I dont have enough experience in development, but I have some experience in HTML.
-                 So I study CSS and JS now with various internet courses and books.</div>
-            <li id="ed">Education:</li>
-            <div> In IT sphere I got some information from internet. 
+            </section>
+            <section id="ex">6. Experience:
+                <div class="exp">I dont have enough experience in development, but I have some experience in HTML.
+                 So I study CSS and JS now with various internet courses and books.
+                </div>
+            </section>
+            <section id="ed">7. Education:
+                <div class="edu"> In IT sphere I got some information from internet. 
                 Still I graduated from BSU, there is I studied psychology. 
                 And I gratuted medicine college in Minsk. 
-            </div>
-            <li id="lang">English language:</li>
-            <div>I studied English language at school and in univecity for a 15 years.
+                </div>
+            </section>
+            <section id="lang">8. English language:
+                <div class="lng">I studied English language at school and in univecity for a 15 years.
                  I think my real english skills are lower than middle. 
                  But of course I want to increase my english in near time.
-            </div>
-        </ol>
+                </div>
+            </section>
     </main>
     <footer>
         <div class="logoinf">
