fix: add heading in html file

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <figcaption>This is my photo</figcaption>
 </figure>
 <nav>
-   <ul class="navig"> Navigation
+   <ul class="navig"> 
        <li><a href="#main"> Main information</a></li>
        <li><a href="#con">Contacts</a></li>
        <li><a href="#about">About me</a></li>
@@ -27,23 +27,23 @@
     </header>
     <main>
         <h2>My CV</h2>
-            <section id="main"> 1. Main information: 
+            <section id="main"> <h4>1. Main information:</h4> 
                <div class="name"> Aleksandr Golamonov</div> 
             </section>
-            <section id="con">2. Contacts:
+            <section id="con"> <h4>2. Contacts:</h4>
                     <ul >
                         <li class="continf">Belarus, Minsk</li>
                         <li class="continf">alex-89fish@tut.by</li>
                         <li class="continf">https://vk.com/id25137523</li>
                     </ul>
             </section>
-            <section id="about">3. About me:
+            <section id="about"> <h4>3. About me:</h4>
             <p class="about">I am a beginner in IT and it is my first course in this area.
                  But I want to start study JS for change my life. 
                  I want to increase my skills and I am ready for it.
             </p>
             </section>
-            <section id="skl">4. Skills:
+            <section id="skl"><h4>4. Skills:</h4>
             <div class="skl">I have a few knowledge in HTML and CSS.</div>
             <div class="skl_two">But I have some useful skills:</div>
             <ul>  
@@ -53,7 +53,7 @@
                 <li class="continf">Greate motivation</li>
             </ul>
             </section>
-            <section id="code">5. Code exapmle:
+            <section id="code"><h4>5. Code exapmle:</h4>
                 <p class="codeinf">This is code from my JS study:</p>
                 <code> 
               function marry (man,woman) {
@@ -71,18 +71,18 @@
               });
             </code>
             </section>
-            <section id="ex">6. Experience:
+            <section id="ex"><h4>6. Experience:</h4>
                 <div class="exp">I dont have enough experience in development, but I have some experience in HTML.
                  So I study CSS and JS now with various internet courses and books.
                 </div>
             </section>
-            <section id="ed">7. Education:
+            <section id="ed"><h4>7. Education:</h4>
                 <div class="edu"> In IT sphere I got some information from internet. 
                 Still I graduated from BSU, there is I studied psychology. 
                 And I gratuted medicine college in Minsk. 
                 </div>
             </section>
-            <section id="lang">8. English language:
+            <section id="lang"><h4>8. English language:</h4>
                 <div class="lng">I studied English language at school and in univecity for a 15 years.
                  I think my real english skills are lower than middle. 
                  But of course I want to increase my english in near time.
