fix: fix erroes with links

--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
       <h4>9. My examlpes</h4>
       <div class="container">
         <div class="examples">
-          <a class="links-images" href="https://rolling-scopes-school.github.io/todd89-JSFEPRESCHOOL/drum-kit/">Drum
-            -kit<img class="myphoto" src="./img/Drum__Kit - Google Chrome 2021-09-20 14.36.19.jpg" alt="drum-kit"></a>
-          <a class="links-images" href="https://rolling-scopes-school.github.io/todd89-JSFEPRESCHOOL/museum/">Museum<img
-              class="myphoto" src="./img/Museum - Google Chrome 2021-09-20 14.35.02.jpg" alt="museum"></a>
+          <a class="links-images" href="https://rolling-scopes-school.github.io/todd89-JSFEPRESCHOOL/drum-kit/" target="blink">Drum
+            -kit<img class="myphoto" src="./img/Drum__Kit.jpg" alt="drum-kit"></a>
+          <a class="links-images" href="https://rolling-scopes-school.github.io/todd89-JSFEPRESCHOOL/museum/" target="blink">Museum<img
+              class="myphoto" src="./img/Museum.jpg" alt="museum"></a>
         </div>
       </div>
     </section>
