fix: fix problem with overflow

--- a/index.html
+++ b/index.html
@@ -71,19 +71,19 @@
       <p class="codeinf">This is one of the first of my codes from my JS studing:</p>
       <pre class="code-example">
          <code> 
-          function createFunctions(n) {
-             var callbacks = [];
-                  
-              for (var i=0; i &lt; n; i++) {
-               let count = 0;
-                 count = count + i;
-                 console.log (count)
-                callbacks.push(function() {
-                 return count;
-                    });
-                   } 
-                  return callbacks;
-             }
+    function createFunctions(n) {
+      var callbacks = [];
+                                
+        for (var i=0; i &lt; n; i++) {
+          let count = 0;
+          count = count + i;
+          console.log (count)
+          callbacks.push(function() {
+            return count;
+               });
+           } 
+         return callbacks;
+     }
             </code>
            </pre>
     </section>
@@ -111,10 +111,11 @@
       <h4>9. My examlpes</h4>
       <div class="container">
         <div class="examples">
-          <a class="links-images" href="https://rolling-scopes-school.github.io/todd89-JSFEPRESCHOOL/drum-kit/" target="blink">Drum
+          <a class="links-images" href="https://rolling-scopes-school.github.io/todd89-JSFEPRESCHOOL/drum-kit/"
+            target="blink">Drum
             -kit<img class="myphoto" src="./img/Drum__Kit.jpg" alt="drum-kit"></a>
-          <a class="links-images" href="https://rolling-scopes-school.github.io/todd89-JSFEPRESCHOOL/museum/" target="blink">Museum<img
-              class="myphoto" src="./img/Museum.jpg" alt="museum"></a>
+          <a class="links-images" href="https://rolling-scopes-school.github.io/todd89-JSFEPRESCHOOL/museum/"
+            target="blink">Museum<img class="myphoto" src="./img/Museum.jpg" alt="museum"></a>
         </div>
       </div>
     </section>
