--- a/index.html
+++ b/index.html
@@ -132,6 +132,5 @@
     </div>
     <h3 class="year">2021</h3>
   </footer>
-
-
+  <script> console.log ("145/150 \n valid layout 10 \n semanyic layout 16 (8 sematics tegs) \n use heading 10 \n use css style 10 \n block in center 10 \n adaptive navigation menu 10 \n img and alt 10 \n use list 10 \n contacts and information 10 \n code and information / highlight 10 \n use english 10 \n pull request 10 \n design 9 \nimages - llinks 10")</script>
 </body>
